fixed google font error

--- a/css/index.css
+++ b/css/index.css
@@ -35,8 +35,8 @@ a:hover, a:active {
 }
 
 h1 {
-    font-family: 'Jaquard 12', system-ui;
-    font-size: 40px;
+    font-family: 'Jacquard 12', system-ui;
+    font-size: 60px;
     color: rgb(120, 15, 82);
 }
 
