--- a/css/index.css
+++ b/css/index.css
@@ -13,7 +13,8 @@ body {
 }
 
 p {
-    font-size: 24px;
+    font-size: 18px;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     color: rgb(48, 48, 80);
 }
 
@@ -38,6 +39,7 @@ h1 {
     font-family: 'Jacquard 12', system-ui;
     font-size: 60px;
     color: rgb(120, 15, 82);
+
 }
 
 h2 {
@@ -45,6 +47,9 @@ h2 {
 }
 
 #Experience {
+    display: flex;
+    flex-direction: column;
+    justify-content: center; 
     font-size: 25px;
     font-weight: bold;
     text-align: center;
@@ -56,18 +61,16 @@ h2 {
     margin: 20px;
 }
 
-ul {
-    text-align: center;
-    font-size: 20px;
-    color: rgb(44, 45, 79);
-    list-style-type: "\2665";
-    list-style-position: inside;
-}
+#Experience div {
+    padding: 20px;
+    border: none;
+    justify-content: space-between;
 
-ul li {
-    background: hotpink;
-    color: rgb(249, 204, 210);
-    margin: 5px;
+}
+.job {
+    display: flex;
+    justify-content: space-between; 
+    
 }
 
 #Connect {
@@ -80,7 +83,9 @@ ul li {
     border-width: 10px;
     padding: 10px;
     margin: 20px;
+   
 }
+
 #About {
     font-size: 25px;
     font-weight: bold;
@@ -91,4 +96,61 @@ ul li {
     border-width: 10px;
     padding: 10px;
     margin: 20px;
+
 }
+
+#Skills {
+    font-size: 25px;
+    font-weight: bold;
+    text-align: center;
+    color: rgb(60, 60, 90);
+    border-color:rgb(74, 75, 121);
+    border-style: solid;
+    border-width: 10px;
+    padding: 10px;
+    margin: 20px;
+
+}
+
+#Projects {
+    font-size: 25px;
+    font-weight: bold;
+    text-align: center;
+    color: rgb(60, 60, 90);
+    border-color:rgb(74, 75, 121);
+    border-style: solid;
+    border-width: 10px;
+    padding: 10px;
+    margin: 20px;
+
+}
+
+nav ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    display: flex;
+    justify-content: center;
+
+}
+
+.flex-list {
+    display: flex;
+    list-style: none;
+    padding: 0;
+    margin: 10px;
+    justify-content: center;
+    align-items: center;
+
+}
+ 
+.flex-list li {
+    background: hotpink;
+    color: rgb(249, 204, 210);
+    margin: 5px;
+    padding: 10px;
+    border: 1px solid navy;
+    
+}
+
